testdata/baselines/reference/submodule/conformance/decoratorOnClassProperty13.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
decoratorOnClassProperty13.ts(1,62): error TS2304: Cannot find name 'PropertyDescriptor'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== decoratorOnClassProperty13.ts (1 errors) ====
    declare function dec(target: any, propertyKey: string, desc: PropertyDescriptor): void;
                                                                 ~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PropertyDescriptor'.
    
    class C {
        @dec accessor prop;
    }